objects/Beta__c.object
<CustomObject>
    <fields>
        <fullName>AlfaCounter__c</fullName>
        <label>AlfaCounter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CounterOfChanges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Counter Of Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <formula>CASE( TestPicklist__c, &quot;A_v&quot;, 10, 40 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TestPicklist__c</fullName>
        <label>TestPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>A_v</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B_v</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C_v</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D_v</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Beta</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Betas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>